--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/font": "^7.3.67",
+    "@mdi/js": "^7.3.67",
     "axios": "^1.5.1",
     "vue": "^3.3.4",
+    "vue-icon": "^2.3.0",
     "vue-router": "^4.2.5",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.3.21",
     "vuex": "^4.1.0"
   },
